--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ a:active {
 #navbar::before {
     content: "";
     position: absolute;
-    background-color: black;
+    background-color: rgb(217, 255, 0);
     height: 100%;
     width: 100%;
     z-index: -1;
-    opacity: 0.7;
+    opacity: 0.85;
 }
 
 #navbar ul {
@@ -42,7 +42,7 @@ a:active {
 
 #navbar ul li a {
     display: flex;
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 500;
@@ -71,7 +71,7 @@ a:active {
     width: 100%;
     height: 840px;
     z-index: -2;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 #cover h1 {
@@ -99,7 +99,7 @@ a:active {
     width: 100%;
     margin-top: 205px;
     padding: 10px;
-    background-color: white;
+    background-color: aliceblue;
 }
 
 .container h1 {
@@ -133,12 +133,14 @@ a:active {
     padding: 10px 20px;
     margin: 20px auto;
     border-radius: 3px;
-    background-color: rgba(255, 0, 0, 0.3);
+    background-color: rgba(255, 0, 0, 0.4);
     border: none;
 }
 
 .container button:hover {
-    background-color: rgba(255, 0, 0, 0.6);
+    background-color: rgba(255, 0, 0, 0.7);
+    color: white;
+    font-weight: 500;
     cursor: pointer;
     transition: 0.3s;
 }
