--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ a:active {
 #navbar::before {
     content: "";
     position: absolute;
-    background-color: rgb(255, 251, 0);
+    background-color: rgb(0, 0, 0);
     height: 100%;
     width: 100%;
+    opacity: 0.7;
     z-index: -1;
 }
 
@@ -41,11 +42,11 @@ a:active {
 
 #navbar ul li a {
     display: flex;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 500;
-    font-family: cursive;
+    font-family: 'Rubik', sans-serif;
     padding: 10px 75px;
 }
 
@@ -131,8 +132,9 @@ a:active {
     font-size: 2rem;
     padding: 10px 20px;
     margin: 20px auto;
+    color: white;
     border-radius: 3px;
-    background-color: rgba(255, 0, 0, 0.4);
+    background-color: rgba(255, 0, 0, 0.5);
     border: none;
 }
 
