--- a/contact.css
+++ b/contact.css
@@ -53,3 +53,77 @@ a:active {
 #navbar ul li a:hover {
     font-weight: 800;
 }
+
+/* contact container  */
+#contact {
+    display: flex;
+    width: 100%;
+    padding: 100px;
+}
+
+.img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.img img {
+    display: flex;
+    height: auto;
+    width: 380px;
+    border-radius: 50%;
+    margin: auto auto;
+    padding: 10px 10px;
+}
+
+.img a {
+    margin: 10px 10px;
+    font-size: 40px;
+    background-color: transparent;
+    border: none;
+}
+
+.img a:hover {
+    cursor: pointer;
+}
+
+/* form area */
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin: auto; */
+}
+
+.form-group {
+    width: 100%;
+}
+
+.form form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.form label {
+    font-size: 1.5rem;
+    font-family: sans-serif;
+}
+
+.form input {
+    font-family: sans-serif;
+    font-size: 1.3rem;
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 5px;
+}
+
+.form textarea {
+    font-family: sans-serif;
+    font-size: 1.3rem;
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 5px;
+}
