--- a/contact.css
+++ b/contact.css
@@ -58,7 +58,7 @@ a:active {
 #contact {
     display: flex;
     width: 100%;
-    padding: 150px;
+    padding: 100px;
 }
 
 .img {
@@ -73,7 +73,7 @@ a:active {
     height: auto;
     width: 380px;
     border-radius: 50%;
-    margin: auto auto;
+    margin: 20px auto;
     padding: 10px 10px;
 }
 
